--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"projectId":"prj_LQ85NvT2uyHTvX4c87XKgPTfOXPD","orgId":"FulMl58e8WrQOWKbGFe7Qm6g","settings":{"buildCommand":null,"devCommand":null,"outputDirectory":"dist","directoryListing":false,"rootDirectory":null,"framework":null}}
+{"projectId":"prj_DIBl0mTgNrWa7xYX7v507yAfGLQG","orgId":"4Eb7auwa1pX1AeLklIDB9S7g"}
